# cs184-final-proj

./: CMakeLists.txt
docs/: final-report.html  index.html
src/: arTest.cpp  glTest.cpp  main.cpp
src/calibration/: calibrate_camera.py
